[package]
name = "cross-vm-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-VM multi-chain integration & example tests (counter, vault, harness)"
publish = false

[lib]
name = "cross_vm_tests"

# The config-driven CLI binary (spec section 8): registers the vault harness and drives it against
# a `*.cross-vm.toml` config (see `vault.cross-vm.toml`). `cross_vm_framework::cli::Cli` (the
# framework's `cli` feature) does the argument parsing, profile selection, and exit-code mapping;
# this binary is just the registration glue.
[[bin]]
name = "cross-vm"
path = "src/bin/cross_vm.rs"

# Heavier harness runs are opt-in so the default `cargo test` stays fast (scenario / rstest matrices
# and the runner-mechanics self-tests always run). Enable per category, e.g.
# `cargo test -p cross-vm-tests --features fuzz`.
[features]
fuzz = []
invariant = []
endurance = []
# Opt-in live endurance run against a real Base Sepolia chain over RPC (needs network access and a
# funded `ON_CHAIN_WALLET` mnemonic in `.env`). Paced by `EnduranceConfig::base_delay`.
rpc-endurance = []

# The vault and counter harnesses plus their support (Vault/Counter contract wrappers, wallets,
# init_tracing) moved into the library (`src/`) so the `cross-vm` bin — which cannot see `tests/`
# or dev-dependencies — can register and drive them through the framework's config-driven CLI. Only
# the deps the *library* itself needs are `[dependencies]`; deps used solely by the `ping-pong` /
# `bridge` test support, or by the test binaries' own test fns, stay `[dev-dependencies]`.
[dependencies]
cross-vm-framework = { path = "../../crates/framework", features = ["cli"] }
cross-vm-solana    = { path = "../../crates/solana" }
cross-vm-solidity  = { path = "../../crates/solidity" }
# All contract bindings (ABI, message types, Solana ids/discriminators, embedded artifacts) come
# from the shared mocks crate instead of duplicated `sol!` blocks and hand-copied constants.
cross-vm-common = { path = "../common", features = ["cw", "evm", "solana", "tron"] }
# Needed by the `cross-vm` bin's `#[tokio::main(flavor = "current_thread")]`; bin targets cannot
# use `[dev-dependencies]`.
tokio.workspace = true
alloy = { workspace = true }
solana-instruction = "3"
solana-system-interface = { version = "2", features = ["bincode"] }
# The vault/boom op structs derive `Serialize`/`Deserialize` (spec section 7.1's externally
# tagged TOML op shape); `to_data` renders each op through `serde_json`.
serde.workspace = true
serde_json.workspace = true
# Load the workspace `.env` (funded mnemonic) for the opt-in `rpc-endurance` live test. Used by
# `counter_setup` (now in the library), which loads `.env` in every mode (harmless when absent), so
# it must be a regular dependency rather than a dev-dependency.
dotenvy.workspace = true

[dev-dependencies]
# Proc-macro attributes must be imported from the proc-macro crate directly so rust-analyzer
# can load the expander (re-exports through the framework prelude break RA expansion).
cross-vm-macros = { path = "../../crates/macros" }
rstest.workspace = true
# `test-util` powers `#[tokio::test(start_paused = true)]`, used to assert `ScenarioStep::delay`
# advances the virtual clock without a real sleep (see `mechanics.rs`'s
# `run_steps_delay_advances_the_paused_clock`).
tokio = { workspace = true, features = ["test-util"] }
# Decode Anchor `emit!` event payloads from Solana program logs (`Program data: <base64>`).
base64.workspace = true
# `tests/cli_e2e.rs` parses the `--json-report` file the real `cross-vm` binary writes.
serde_json.workspace = true

[lints]
workspace = true
