[package]
name = "evm-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Single-VM (EVM) example tests: attribute-macro harness, config-driven, and CLI styles"
publish = false

[lib]
name = "evm_tests"

# The config-driven CLI binary: registers the counter harness and drives it against
# `counter.cross-vm.toml`. Shares the `cross-vm` binary name with the other example crates; always
# invoke it with `-p evm-tests` (a bare `cargo run --bin cross-vm` is ambiguous across the workspace).
[[bin]]
name = "cross-vm"
path = "src/bin/cross_vm.rs"

# Heavier harness runs are opt-in so the default `cargo test` stays fast (the scenario test and the
# config-driven fan-out always run). Enable per category, e.g. `cargo test -p evm-tests --features fuzz`.
[features]
fuzz = []
invariant = []
endurance = []

[dependencies]
cross-vm-framework = { path = "../../crates/framework", features = ["cli"] }
cross-vm-solidity  = { path = "../../crates/solidity" }
# Counter contract bindings (EVM ABI + creation bytecode) plus the shared wallet/funding helpers.
cross-vm-common = { path = "../common", features = ["evm"] }
alloy = { workspace = true }
# Needed by the `cross-vm` bin's `#[tokio::main(flavor = "current_thread")]`; bin targets cannot
# use `[dev-dependencies]`.
tokio.workspace = true
# `CounterOp` / `CounterOpKind` derive `Serialize`/`Deserialize` for the config-driven op shape.
serde.workspace = true

[dev-dependencies]
# Proc-macro attributes must be imported from the proc-macro crate directly so rust-analyzer can
# load the expander (re-exports through the framework prelude break RA expansion).
cross-vm-macros = { path = "../../crates/macros" }
rstest.workspace = true
# `tests/cli_e2e.rs` parses the `--json-report` file the `cross-vm` binary writes.
serde_json.workspace = true

[lints]
workspace = true
