[package]
name = "cross-vm-integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-VM multi-chain integration & example tests (counter, vault, harness)"
publish = false

# Heavier harness runs are opt-in so the default `cargo test` stays fast (scenario / rstest matrices
# and the runner-mechanics self-tests always run). Enable per category, e.g.
# `cargo test -p cross-vm-integration-tests --features fuzz`.
[features]
fuzz = []
invariant = []
endurance = []
# Opt-in live endurance run against a real Base Sepolia chain over RPC (needs network access and a
# funded `ON_CHAIN_WALLET` mnemonic in `.env`). Paced by `EnduranceConfig::base_delay`.
rpc-endurance = []

[dev-dependencies]
cross-vm-framework = { path = "../../crates/framework" }
# Proc-macro attributes must be imported from the proc-macro crate directly so rust-analyzer
# can load the expander (re-exports through the framework prelude break RA expansion).
cross-vm-macros = { path = "../../crates/macros" }
cross-vm-solana    = { path = "../../crates/solana" }
cross-vm-solidity  = { path = "../../crates/solidity" }
tokio.workspace = true
# Subscriber for the framework's tracing debug logs; routed through libtest capture in `support`.
tracing-subscriber.workspace = true
rstest = "0.23"
cosmwasm-std.workspace = true
cw-multi-test.workspace = true
counter = { path = "../cosmwasm-contracts/counter", features = ["cross-vm"] }
vault   = { path = "../cosmwasm-contracts/vault" }
ping-pong = { path = "../cosmwasm-contracts/ping-pong" }
alloy = { workspace = true }
# Load the workspace `.env` (funded mnemonic) for the opt-in `rpc-endurance` live test.
dotenvy.workspace = true
solana-instruction = "3"
solana-system-interface = { version = "2", features = ["bincode"] }
# Decode Anchor `emit!` event payloads from Solana program logs (`Program data: <base64>`).
base64 = "0.22"
