[package]
name = "cross-vm-integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-VM multi-chain integration & example tests (counter, vault, harness)"
publish = false

[lib]
name = "cross_vm_integration_tests"

# The config-driven CLI binary (spec section 8): registers the vault harness and drives it against
# a `*.cross-vm.toml` config (see `vault.cross-vm.toml`). `cross_vm_framework::cli::Cli` (the
# framework's `cli` feature) does the argument parsing, profile selection, and exit-code mapping;
# this binary is just the registration glue.
[[bin]]
name = "cross-vm"
path = "src/bin/cross_vm.rs"

# Heavier harness runs are opt-in so the default `cargo test` stays fast (scenario / rstest matrices
# and the runner-mechanics self-tests always run). Enable per category, e.g.
# `cargo test -p cross-vm-integration-tests --features fuzz`.
[features]
fuzz = []
invariant = []
endurance = []
# Opt-in live endurance run against a real Base Sepolia chain over RPC (needs network access and a
# funded `ON_CHAIN_WALLET` mnemonic in `.env`). Paced by `EnduranceConfig::base_delay`.
rpc-endurance = []

# The vault harness + its support (Vault contract wrapper, wallets, init_tracing) moved into the
# library (`src/`, P2 vault migration) so the `cross-vm` bin — which cannot see `tests/` or
# dev-dependencies — can register and drive it through the framework's config-driven CLI. Only the
# deps the *library* itself needs are `[dependencies]`; deps used solely by the `counter` /
# `ping-pong` / `bridge` test support, or by the test binaries' own test fns, stay `[dev-dependencies]`.
[dependencies]
cross-vm-framework = { path = "../../crates/framework", features = ["cli"] }
cross-vm-solana    = { path = "../../crates/solana" }
cross-vm-solidity  = { path = "../../crates/solidity" }
# Needed by the `cross-vm` bin's `#[tokio::main(flavor = "current_thread")]`; bin targets cannot
# use `[dev-dependencies]`.
tokio.workspace = true
# `init_tracing` (`src/support/mod.rs`) routes the framework's per-op / per-invariant debug logs.
tracing-subscriber.workspace = true
cosmwasm-std.workspace = true
cw-multi-test.workspace = true
vault = { path = "../cosmwasm-contracts/vault" }
alloy = { workspace = true }
solana-instruction = "3"
solana-system-interface = { version = "2", features = ["bincode"] }
# `VaultOp`/`VaultOpKind` derive `Serialize`/`Deserialize` (spec section 7.1's externally tagged
# TOML op shape).
serde.workspace = true

[dev-dependencies]
# Proc-macro attributes must be imported from the proc-macro crate directly so rust-analyzer
# can load the expander (re-exports through the framework prelude break RA expansion).
cross-vm-macros = { path = "../../crates/macros" }
rstest.workspace = true
counter = { path = "../cosmwasm-contracts/counter", features = ["cross-vm"] }
ping-pong = { path = "../cosmwasm-contracts/ping-pong" }
# Load the workspace `.env` (funded mnemonic) for the opt-in `rpc-endurance` live test.
dotenvy.workspace = true
# Decode Anchor `emit!` event payloads from Solana program logs (`Program data: <base64>`).
base64.workspace = true

[lints]
workspace = true
