[package]
name = "math-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Raw harness-core + harness-cli example: a math harness driven by generic config and CLI, no domain layer"
publish = false

[dependencies]
harness-core = { workspace = true, features = ["serde"] }
harness-cli.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true

[[bin]]
name = "math-cli"
path = "src/bin/math_cli.rs"

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
