[package]
name = "solana-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Single-VM (Solana) example tests: attribute-macro harness, config-driven, and CLI styles"
publish = false

[lib]
name = "solana_tests"

# The config-driven CLI binary: registers the counter harness and drives it against
# `counter.cross-vm.toml`. Shares the `cross-vm` binary name with the other example crates; always
# invoke it with `-p solana-tests` (a bare `cargo run --bin cross-vm` is ambiguous across the workspace).
[[bin]]
name = "cross-vm"
path = "src/bin/cross_vm.rs"

# Heavier harness runs are opt-in so the default `cargo test` stays fast (the scenario test and the
# config-driven fan-out always run). Enable per category, e.g. `cargo test -p solana-tests --features fuzz`.
[features]
fuzz = []
invariant = []
endurance = []

[dependencies]
cross-vm-framework = { path = "../../crates/framework", features = ["cli"] }
cross-vm-solana = { path = "../../crates/solana" }
# Counter program bindings (SVM program bytes + discriminators) plus the shared wallet/funding helpers.
cross-vm-common = { path = "../common", features = ["solana"] }
solana-instruction = "3"
solana-system-interface = { version = "2", features = ["bincode"] }
# Needed by the `cross-vm` bin's `#[tokio::main(flavor = "current_thread")]`; bin targets cannot
# use `[dev-dependencies]`.
tokio.workspace = true
# `CounterOp` / `CounterOpKind` derive `Serialize`/`Deserialize` for the config-driven op shape.
serde.workspace = true

[dev-dependencies]
# Proc-macro attributes must be imported from the proc-macro crate directly so rust-analyzer can
# load the expander (re-exports through the framework prelude break RA expansion).
cross-vm-macros = { path = "../../crates/macros" }
rstest.workspace = true
# `tests/cli_e2e.rs` parses the `--json-report` file the `cross-vm` binary writes.
serde_json.workspace = true

[lints]
workspace = true
