[package]
name = "solana-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Single-VM (Solana) example tests: attribute-macro harness, config-driven, and CLI styles"
publish = false

[lib]
name = "solana_tests"

# The config-driven CLI binary: registers the counter harness and drives it against
# `counter.cross-vm.toml`. Uniquely named (`solana-cli`) so it never collides with the other example
# crates' binaries; run it with `cargo run -p solana-tests`.
[[bin]]
name = "solana-cli"
path = "src/bin/cross_vm.rs"

# Heavier harness runs are opt-in so the default `cargo test` stays fast (the scenario test and the
# config-driven fan-out always run). Enable per category, e.g. `cargo test -p solana-tests --features fuzz`.
[features]
fuzz = []
invariant = []
endurance = []

[dependencies]
cross-vm-framework = { path = "../../crates/framework", features = ["cli", "presets"] }
# The shared `Counter` wrapper + harness (SVM program bytes/discriminators, instruction builders,
# ops/world serde derives) and the shared wallet/funding helpers; this crate only supplies the
# `SOLANA_DEVNET` preset + label.
cross-vm-common = { path = "../common", features = ["solana"] }
# Needed by the `cross-vm` bin's `#[tokio::main(flavor = "current_thread")]`; bin targets cannot
# use `[dev-dependencies]`.
tokio.workspace = true

[dev-dependencies]
# Proc-macro attributes must be imported from the proc-macro crate directly so rust-analyzer can
# load the expander (re-exports through the framework prelude break RA expansion).
cross-vm-macros = { path = "../../crates/macros" }
rstest.workspace = true
# `tests/cli_e2e.rs` parses the `--json-report` file the `cross-vm` binary writes.
serde_json.workspace = true

[lints]
workspace = true
