[workspace]
resolver = "2"

[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "2"
cw-storage-plus = "2"
serde = { version = "1", default-features = false, features = ["derive"] }

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true

[profile.release.package."*"]
opt-level = "z"
