[workspace]
resolver = "2"

[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "2"
cw-storage-plus = "2"
serde = { version = "1", default-features = false, features = ["derive"] }
# Cross-VM typed message handles (off for the wasm build; on for host tests).
cross-vm-cosmwasm = { path = "../../../crates/cosmwasm", optional = true }
cross-vm-macros = { path = "../../../crates/macros", optional = true }

[features]
# Derive `CwExecuteFns` / `CwQueryFns` on the messages so test wrappers get typed calls.
cross-vm = ["dep:cross-vm-cosmwasm", "dep:cross-vm-macros"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true

[profile.release.package."*"]
opt-level = "z"
