[package]
name = "ping-pong"
version = "0.1.0"
description = "IBC-style ping-pong program for cross-vm-testing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ping_pong"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
